--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,6 @@
 <body>
   <div id="app"></div> <!-- Vue will mount here -->
   
-  <script type="module" src="/src/sign-up.js"></script> <!-- New entry file -->
+  <script type="module" src="/src/signup.js"></script> <!-- New entry file -->
 </body>
 </html>
