--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
+  <link rel="stylesheet" href="./src/style.css">
+  <title>FitSched: Sign Up</title>
 </head>
 <body>
   <div id="app"></div> <!-- Vue will mount here -->
